# turing-machine-cpp

./: .gitignore  CMakeLists.txt  README.md
TuringMachine/: CMakeLists.txt  main.cpp  move_direction.hpp  tape.hpp  tape_cell.hpp  tm_auto_executor.hpp  tm_operation.hpp  tm_step_executor.hpp  turing_machine.hpp  vector_helpers.hpp
src/: CMakeLists.txt  abstract_turing_machine.hpp  main.cpp  tm.cpp  tm_dots.cpp  tm_graph.cpp  turing_machine.hpp
src/executor/: CMakeLists.txt  abstract_tm_executor.hpp  execution_result.hpp  tm_auto_executor.hpp  tm_executor.hpp  tm_operation.hpp  tm_step_executor.hpp
src/graph/: CMakeLists.txt  abstract_edge.hpp  edge.hpp  edge_args.hpp  move_direction.hpp  node.hpp  symbol.hpp
src/machines/: CMakeLists.txt  abstract_tm_provider.hpp  int_machine_provider.hpp  multiply_machine_provider.cpp  multiply_machine_provider.hpp  subtract_machine_provider.cpp  subtract_machine_provider.hpp  sum_machine_provider.cpp  sum_machine_provider.hpp  tm_provider.hpp  tm_provider_collection.cpp  tm_provider_collection.hpp  tm_provider_factory.cpp  tm_provider_factory.hpp  turing_machine_provider.hpp
src/presentation/: CMakeLists.txt  executor_runner.hpp  generic_input_executor.hpp  input_executor.hpp  input_executor_runner.hpp  user_input.cpp  user_input.hpp  utils.cpp  utils.hpp
src/tape/: CMakeLists.txt  tape.hpp  tape_cell.hpp  tape_iterator.hpp
src/utils/: CMakeLists.txt  defines.hpp  misc.cpp  misc.hpp  typedefs.hpp  vector_helpers.hpp
